[gd_scene load_steps=12 format=2]

[ext_resource path="res://Puzzle/BorderMargin.gd" type="Script" id=1]
[ext_resource path="res://Puzzle/frame.png" type="Texture" id=2]
[ext_resource path="res://Puzzle/cursor.png" type="Texture" id=3]
[ext_resource path="res://Puzzle/PuzzleBuilder.gd" type="Script" id=4]
[ext_resource path="res://Puzzle/edge.png" type="Texture" id=5]
[ext_resource path="res://Puzzle/fills.png" type="Texture" id=6]
[ext_resource path="res://Puzzle/PuzzleBuilder.tres" type="Theme" id=7]
[ext_resource path="res://Puzzle/cursor.gd" type="Script" id=8]
[ext_resource path="res://Puzzle/BaseGridSquare.gd" type="Script" id=9]
[ext_resource path="res://Puzzle/GridContainer.gd" type="Script" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PuzzleBuilder" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.0
margin_top = -220.0
margin_right = 284.0
margin_bottom = 220.0
theme = ExtResource( 7 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 184.0
margin_top = 120.0
margin_right = 384.0
margin_bottom = 319.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VHintsMargin" type="MarginContainer" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 35.0
custom_constants/margin_bottom = 3

[node name="VHints" type="HBoxContainer" parent="VBoxContainer/VHintsMargin"]
margin_right = 200.0
margin_bottom = 32.0
grow_horizontal = 0
alignment = 2

[node name="TopBorderMargin" type="MarginContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 200.0
margin_bottom = 37.0
custom_constants/margin_left = 36
script = ExtResource( 1 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TopBorderMargin"]
margin_left = 36.0
margin_right = 200.0
margin_bottom = 2.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 200.0
margin_bottom = 197.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HHintsMargin" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 160.0
custom_constants/margin_right = 4

[node name="HHints" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/HHintsMargin"]
margin_right = 32.0
margin_bottom = 160.0
rect_min_size = Vector2( 32, 0 )

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 38.0
margin_bottom = 160.0

[node name="PuzzleAreaPanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 38.0
margin_right = 198.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/PuzzleAreaPanel"]
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
columns = 5
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="Sprite" parent="VBoxContainer/HBoxContainer/PuzzleAreaPanel"]
texture = ExtResource( 3 )
centered = false
script = ExtResource( 8 )

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 198.0
margin_right = 200.0
margin_bottom = 160.0

[node name="BottomBorderMargin" type="MarginContainer" parent="VBoxContainer"]
margin_top = 197.0
margin_right = 200.0
margin_bottom = 199.0
custom_constants/margin_left = 36
script = ExtResource( 1 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/BottomBorderMargin"]
margin_left = 36.0
margin_right = 200.0
margin_bottom = 2.0

[node name="BaseGridSquare" type="TextureButton" parent="."]
visible = false
margin_left = 268.0
margin_top = 204.0
margin_right = 300.0
margin_bottom = 236.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
script = ExtResource( 9 )

[node name="FillSprite" type="Sprite" parent="BaseGridSquare"]
texture = ExtResource( 6 )
centered = false
hframes = 4
__meta__ = {
"_editor_description_": "0: empty
1: filled
2: crossed
3: marked"
}

[node name="frame" type="Sprite" parent="BaseGridSquare"]
position = Vector2( 16, 16 )
texture = ExtResource( 2 )

[node name="LeftEdge" type="Sprite" parent="BaseGridSquare"]
texture = ExtResource( 5 )
centered = false
hframes = 6
__meta__ = {
"_editor_description_": "frame 0-5 for different edge thicknesses"
}

[node name="TopEdge" type="Sprite" parent="BaseGridSquare"]
position = Vector2( 32, 0 )
rotation = 1.5708
texture = ExtResource( 5 )
centered = false
hframes = 6

[node name="RightEdge" type="Sprite" parent="BaseGridSquare"]
texture = ExtResource( 5 )
centered = false
flip_h = true
hframes = 6

[node name="BottomEdge" type="Sprite" parent="BaseGridSquare"]
position = Vector2( 32, 0 )
rotation = 1.5708
texture = ExtResource( 5 )
centered = false
flip_h = true
hframes = 6
[connection signal="resized" from="VBoxContainer/HBoxContainer/HHintsMargin" to="VBoxContainer/BottomBorderMargin" method="_on_HHintsMargin_resized"]
[connection signal="resized" from="VBoxContainer/HBoxContainer/HHintsMargin" to="VBoxContainer/TopBorderMargin" method="_on_HHintsMargin_resized"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare2" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare2" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare3" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare3" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare4" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare4" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare5" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare5" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare6" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare6" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare7" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare7" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare8" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare8" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare9" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare9" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare10" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare10" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare11" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare11" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare12" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare12" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare13" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare13" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare14" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare14" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare15" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare15" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare16" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare16" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare17" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare17" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare18" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare18" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare19" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare19" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare20" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare20" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare21" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare21" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare22" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare22" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare23" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare23" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare24" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare24" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare25" to="VBoxContainer/HBoxContainer/PuzzleAreaPanel/GridContainer/BaseGridSquare25" method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="BaseGridSquare" to="BaseGridSquare" method="_on_TextureRect_gui_input"]
[connection signal="mouse_entered" from="BaseGridSquare" to="BaseGridSquare" method="_on_BaseGridSquare_mouse_entered"]
